--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     height: 100%;
     width: 100%;
+    cursor: crosshair;
 }
 
 .wrapper {
@@ -54,13 +55,13 @@ body {
 
 #cube .front  { transform: rotateY(   0deg ) translateZ( 250px ); }
 #cube .back   { transform: rotateX( 180deg ) translateZ( 250px ); }
-#cube .right  { transform: rotateY(  90deg ) translateZ( -364px ); }
+#cube .right  { transform: rotateY(  90deg ) translateZ( -410px ); }
 #cube .left   { transform: rotateY( -90deg ) translateZ( 250px ); }
 #cube .top    { transform: rotateX(  90deg ) translateZ( 250px ); }
 #cube .bottom { transform: rotateX( -90deg ) translateZ( 994px ); }
 
 #cube .front {
-    background-color: antiquewhite;
+    /*background-color: antiquewhite*/
 }
 
 #cube .back {
@@ -141,6 +142,20 @@ body {
     height: 100%;
     width: 25%;
     z-index: 3;
+    
+}
+
+.right:hover {
+    cursor: e-resize;
+}
+.top:hover {
+    cursor: n-resize;
+}
+.bottom:hover {
+    cursor: s-resize;
+}
+.left:hover {
+    cursor: w-resize;
 }
 
 .right {
@@ -171,4 +186,13 @@ body {
     height: 25%;
     width: 100%;
     z-index: 2;
+}
+
+.video-background { /* class name used in javascript too */
+    width: 100%; /* width needs to be set to 100% */
+    height: 100%; /* height needs to be set to 100% */
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 99;
 }
