--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
+* {
+    margin: 0;
+}
+
 html {
     position: relative;
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
+    height: 100%;
     background-color: black;
-    margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -19,7 +24,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
- 
+    z-index: -3;
 }
 
 .wrapper::before {
@@ -31,14 +36,15 @@ body {
 		left: 0;
 		background-image: linear-gradient(to bottom right,#151515,#000);
 		opacity: .3; 
+        z-index: -1;
        
   }
 
 
 .container {
     position: absolute;
-    top: 150;
-    left: 100;
+    top: 10%;
+    left: 10%;
     float: left;
 }
 
@@ -68,8 +74,17 @@ video {
     animation: spinCube 8s infinite ease-in-out;
 }
 
-#widget iframe {
+footer {
+    min-height: 100%;
+    margin: 0;
+}
+
+footer #widget {
     height: 100px;
+}
+
+#widget iframe {
+    
     position: absolute;
     left: 0;
     bottom: 0;
@@ -79,8 +94,13 @@ video {
     opacity: .8;
 }
 
-.sc-artwork-list,
+#widget iframe div .visualAudible__footer,
+#widget iframe div .visualAudible__body {
+    background-color: rgba(66, 28, 82, 0.9);
+}
+
+/*.sc-artwork-list,
 .sc-info,
 .sc-trackslist,
 .sc-info-toggle,
-.sc-scrubber { display: none !important; }
+.sc-scrubber { display: none !important; } */
