--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ video {
 }
 
 .content {
+    margin-top: 4em;
+    margin-right: 2em;
     float: right;
     color: #fff;
     z-index: 99;
@@ -63,9 +65,50 @@ video {
 
 .header h1 {
     color: #fff;
-    font-size: 4em;
+    font-size: 5em;
     opacity: 1;
+    letter-spacing: 10px;
 }
+
+.content ul {
+    padding: 0;
+    list-style: none;
+    text-align: left;
+    
+}
+
+.content ul li {
+    margin-top: 2em;
+    letter-spacing: 2px;
+    font-weight: lighter;
+    
+}
+
+.content ul li a {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border-bottom: 3px solid transparent;    
+    width: 0px;
+    transition: 1s ease;
+    white-space: nowrap;
+    height: 20px;
+}
+
+.content ul li a:hover {
+    color: mediumpurple;
+    border-bottom: 3px solid mediumpurple;
+}
+
+.content ul li #facebookLink:hover {
+    width: 95px;
+}
+
+.content ul li #soundcloudLink:hover {
+    width: 115px;
+}
+
+
 
 .spinning {
     -webkit-animation: spinCubeWebkit 8s infinite ease-in-out;
@@ -94,9 +137,8 @@ footer #widget {
     opacity: .8;
 }
 
-#widget iframe div .visualAudible__footer,
-#widget iframe div .visualAudible__body {
-    background-color: rgba(66, 28, 82, 0.9);
+#widget div div div div div .visualAudible__footer .g-transition-transform {
+    background-color: black !important;
 }
 
 /*.sc-artwork-list,
