--- a/style.css
+++ b/style.css
@@ -71,10 +71,176 @@ video {
     text-align: left;
 }
 
+
+.glitch {
+  color: white;
+  font-size: 100px;
+  position: relative;
+  width: 400px;
+  margin: 0 auto;
+}
+
+@keyframes noise-anim {
+  0% {
+    clip: rect(62px, 9999px, 11px, 0);
+  }
+  5% {
+    clip: rect(64px, 9999px, 84px, 0);
+  }
+  10% {
+    clip: rect(50px, 9999px, 42px, 0);
+  }
+  15% {
+    clip: rect(6px, 9999px, 23px, 0);
+  }
+  20% {
+    clip: rect(15px, 9999px, 98px, 0);
+  }
+  25% {
+    clip: rect(10px, 9999px, 89px, 0);
+  }
+  30% {
+    clip: rect(46px, 9999px, 70px, 0);
+  }
+  35% {
+    clip: rect(83px, 9999px, 61px, 0);
+  }
+  40% {
+    clip: rect(12px, 9999px, 69px, 0);
+  }
+  45% {
+    clip: rect(81px, 9999px, 12px, 0);
+  }
+  50% {
+    clip: rect(92px, 9999px, 62px, 0);
+  }
+  55% {
+    clip: rect(46px, 9999px, 41px, 0);
+  }
+  60% {
+    clip: rect(77px, 9999px, 10px, 0);
+  }
+  65% {
+    clip: rect(10px, 9999px, 93px, 0);
+  }
+  70% {
+    clip: rect(69px, 9999px, 95px, 0);
+  }
+  75% {
+    clip: rect(84px, 9999px, 21px, 0);
+  }
+  80% {
+    clip: rect(89px, 9999px, 44px, 0);
+  }
+  85% {
+    clip: rect(90px, 9999px, 9px, 0);
+  }
+  90% {
+    clip: rect(93px, 9999px, 72px, 0);
+  }
+  95% {
+    clip: rect(48px, 9999px, 48px, 0);
+  }
+  100% {
+    clip: rect(3px, 9999px, 31px, 0);
+  }
+}
+.glitch:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 mediumpurple;
+  top: 0;
+  color: white;
+  background: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+
+@keyframes noise-anim-2 {
+  0% {
+    clip: rect(64px, 9999px, 86px, 0);
+  }
+  5% {
+    clip: rect(23px, 9999px, 17px, 0);
+  }
+  10% {
+    clip: rect(17px, 9999px, 90px, 0);
+  }
+  15% {
+    clip: rect(47px, 9999px, 12px, 0);
+  }
+  20% {
+    clip: rect(21px, 9999px, 6px, 0);
+  }
+  25% {
+    clip: rect(9px, 9999px, 85px, 0);
+  }
+  30% {
+    clip: rect(64px, 9999px, 34px, 0);
+  }
+  35% {
+    clip: rect(26px, 9999px, 59px, 0);
+  }
+  40% {
+    clip: rect(52px, 9999px, 10px, 0);
+  }
+  45% {
+    clip: rect(3px, 9999px, 1px, 0);
+  }
+  50% {
+    clip: rect(32px, 9999px, 91px, 0);
+  }
+  55% {
+    clip: rect(52px, 9999px, 30px, 0);
+  }
+  60% {
+    clip: rect(99px, 9999px, 50px, 0);
+  }
+  65% {
+    clip: rect(4px, 9999px, 43px, 0);
+  }
+  70% {
+    clip: rect(52px, 9999px, 98px, 0);
+  }
+  75% {
+    clip: rect(5px, 9999px, 80px, 0);
+  }
+  80% {
+    clip: rect(73px, 9999px, 11px, 0);
+  }
+  85% {
+    clip: rect(99px, 9999px, 2px, 0);
+  }
+  90% {
+    clip: rect(71px, 9999px, 72px, 0);
+  }
+  95% {
+    clip: rect(63px, 9999px, 38px, 0);
+  }
+  100% {
+    clip: rect(99px, 9999px, 88px, 0);
+  }
+}
+.glitch:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 #5E2D79;
+  top: 0;
+  color: white;
+  background: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+
 .content ul {
     padding: 0;
     list-style: none;
     text-align: left;
+    padding-left: 5px;
     
 }
 
@@ -162,8 +328,16 @@ footer #widget {
     background-color: black !important;
 }
 
-/*.sc-artwork-list,
-.sc-info,
-.sc-trackslist,
-.sc-info-toggle,
-.sc-scrubber { display: none !important; } */
+/* MEDIA QUERIES */
+
+@media only screen (max-width: 830px) {
+    .cube {
+        height: 200px;
+        width: 200px;
+    }
+    
+    .cube > div {
+        height: 200px;
+        width: 200px;
+    }
+}
